# process_killer

./: .gitignore  .pre-commit-config.yaml  .trufflehog-allowlist.txt  .trufflehog.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  _version.py  process_killer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  version-bump.yml
